k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-app-service
spec:
  selector:
    app: health-app
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 8000
  type: LoadBalancer
