k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otusapp-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$3
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/([^/]+)(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: health-app-service
                port:
                  number: 8082
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: health-app-service
                port:
                  number: 8082
